# cmux

./: .dockerignore  .env.coolify.example  .env.example  .env.local.template  .gitattributes  .gitignore  .oxlintrc.json  CLAUDE.local-legacy.md  CLAUDE.local.md  CLAUDE.md  CONTEXT.md  Dockerfile  Makefile  ONBOARDING.md  PLAN.md  PLAN_MODE_ARCHITECTURE.md  PLAN_MODE_INDEX.md  PLAN_MODE_QUICK_START.md  PLAN_MODE_REFERENCE.md  POSTHOG_TRACKING.md  README.dev.md  README.md  TODOS.md  docker-compose.coolify.yml  eslint.config.js  package.json  pnpm-lock.yaml  test-autopr-v2.txt  test-autopr.txt  test-workflow-validation.txt  tsconfig.json  vitest.workspace.ts
.beads/: .gitignore  issues.jsonl
.claude/: dev-loop.config.md  settings.json
.claude/commands/: autopilot_reset.md  review.md  review_agent.md  upstream_gap.md
.claude/hooks/: DEPRECATED.md  autopilot-keep-running.sh  codex-review.sh  session-activity-capture.sh  session-start.sh  test-completed-marker.sh  test-session-activity-capture.sh
.claude/plans/: .gitkeep  README.md  TEMPLATE.md  dev-direction-2026-q2.md  dev-direction-2026-q3.md  dev-direction-2026-q4.md  flatten-rules-pipeline.md  native-workflow-dashboard.md  phase-0.5-activity-stream-impl.md  test-simple-task.md
.claude/scripts/: codex-review-extract.sh  execute-plan.sh
.claude/skills/: cmux-devbox  devsh  devsh-orchestrator  execute-plan  head-agent-init  track-agent
.cmux/memory/: MAILBOX.json  MEMORY.md  TASKS.json
.codex/: autopilot-hooks.json  codex-shell-helpers.sh  config.toml  hooks.json  ralph-loop-hooks.json  ralph-loop-state.json
.codex/hooks/: autopilot-stop.sh  cmux-stop-dispatch.sh  home-autopilot-stop.sh  home-session-start.sh  managed-session-start.sh  ralph-loop-stop.sh  session-start.sh  test-autopilot-stop.sh  test-cmux-stop-dispatch.sh  test-ralph-loop-stop.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.convex.yml  docker-compose.devcontainer.yml
.githooks/: pre-commit
.github/workflows/: checks.yml  coolify-client-deployments.yml  coolify-deploy.yml  coolify-server-deployments.yml  coolify-www-deployments.yml  daily-release.yml  devsh-memory-mcp.yml  docker-client-build.yml  docker-server-build.yml  docker-www-build.yml  docker.yml  edge-router-pvelxc.yml  host-screenshot-collector.yml  morph-snapshot.yml  publish-agent-sdk.yml  publish-devsh-memory-mcp.yml  pve-lxc-snapshot.yml  release-on-tag.yml  release-pr.yml  release-tag-on-merge.yml  release-updates.yml  sandbox.yml  scheduled-release-pr.yml  sync-codex-models.yml  sync-dev-docs.yml  sync-upstream-pr.yml  tests.yml
apps/chatgpt-app/: package.json
apps/cli/: .env.example  README.md  index.ts  index.tsx  package.json  stack-auth.ts
apps/client/: Dockerfile  README.md  build-mac-staging-workaround.sh  build-mac-workaround.sh  electron-builder.fork.json  electron-builder.fork.local.json  electron-builder.json  electron-vite-plugin-resolve-workspace.ts  electron.vite.config.ts  index-electron.html  index.html  nginx.conf  package.json  sentry.config.ts  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
apps/cmux-devbox-2/: Makefile  README.md
apps/cmux-proxy/: package.json
apps/server/native/core/: Cargo.toml  PROXY_MIGRATION.md  index.d.ts  package.json
apps/server/native/core/src/: branches.rs  lib.rs  preview_proxy.rs  tests.rs  types.rs  util.rs
apps/server/native/core/src/diff/: landed.rs  refs.rs  workspace.rs
apps/server/native/core/src/merge_base/: bfs.rs
apps/server/native/core/src/proxy/: auth.rs  client.rs  config.rs  mod.rs  router.rs  routing.rs  server.rs  test.rs  tests.rs  tunnel.rs  types.rs  websocket.rs
apps/server/native/core/src/repo/: cache.rs
configs/: ide-deps.json  setup-claude-oauth-wrappers.sh  zsh-history.sh
crates/cmux-novnc-proxy/: Cargo.toml
crates/cmux-novnc-proxy/src/: lib.rs  main.rs
crates/cmux-novnc-proxy/tests/: proxy.rs
crates/cmux-proxy/: Cargo.toml
crates/cmux-proxy/src/: lib.rs
crates/cmux-proxy/tests/: proxy.rs
docs/: CLI_GUIDE.md  CLOUD_WORKSPACE_START_MODES.md  COOLIFY_DEPLOYMENT.md  ERROR_HANDLING.md  OPS_LAUNCH_CHECKLIST.md  PLATFORM_SIMPLIFICATION_STRATEGY.md  PR27-PVE-LXC-REVIEW.md  enhanced-github-pr-integration.md  fix-morph-snapshot-disk-space.md
scripts/: README.md  SEED.md  _port-clean.sh  agent-autopilot.sh  apply-ide-deps-package-overrides.ts  autopilot-reset.sh  build-modal-snapshot.ts  build-prod-mac-arm64-no-notarize-or-sign.sh  build-prod-win.sh  build-push-daytona.sh  bump-ide-deps.ts  bump-version.sh  cdp_console.py  check-and-simplify.sh  check.ts  chrome-debug.sh  clean.sh  cleanup-dev.sh  codex-home-launch.sh  contributor-stats.sh  convex-clone-db.ts  convex-log-errors.ts  coolify-find-app-uuid.sh  debug-cert-gen.ts  debug-manual-tls.ts  debug-proxy-server.ts  dev-electron-simple.sh  dev-www-startup.test.ts  dev.sh  diagnose-pve-lxc.sh  docker-build-multiplatform.sh  docker-build.sh  docker-local-sanity-check.sh  docker-run-browser-agent.sh  docker-shell.sh  docker-trigger-screenshot.sh  e2b_templates.py  install-codex-home-hooks.sh  local-preview-to-pr.ts  maintenance.sh  (+75 more)
(+1351 files in other folders)
