[package]
name = "cmux_native_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
fuzz-tests = []

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2"
anyhow = "1"
rayon = "1.10"
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
gix = { version = "0.66", default-features = true, features = ["status", "revision"] }
similar = "2"

# HTTP/2 and proxy dependencies
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
bytes = "1"

# WebSocket support
tokio-tungstenite = "0.24"
tungstenite = "0.24"
futures-util = "0.3"

# TLS support for HTTPS
rustls = { version = "0.23", features = ["std"] }
tokio-rustls = "0.26"
hyper-rustls = { version = "0.27", features = ["http2"] }
rustls-native-certs = "0.8"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
once_cell = "1.20"
parking_lot = "0.12"
dashmap = "6"
sha1 = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
